# GES-xml-converter

./: README.md  environment.yml  invoices.py  invoices_gui.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  xml_parser.py
GES_invoices_utils/: header_modifier.py
examples/: invoices.py  invoices_gui.py
src/ges_xml_converter/: bytesIO_utils.py  invoices_modifier.py  p7m_converter.py  xml_parser.py
src/xml_parser/: bytesIO_utils.py  invoices_modifier.py  xml_parser.py
tests/: test_bytesIO_utils.py  test_invoices_modifier.py  test_xml_parser.py
xml_parser/: bytesIO_utils.py  p7m_converter.py  xml_parser.py
