[metadata]
name = ges-xml-converter
description = Simple XML converter/parser for parsing italian electronic invoices
author = Pierpaolo Pravatto
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    ges_xml_converter
install_requires =
    pandas>=1.4.3
    lxml>=4.9.0
    cryptography>=37.0.2
    pyOpenSSL>=22.0.0
    openpyxl>=3.0.10
    streamlit>=1.10.0
    numpy
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
xml_parser = py.typed

[flake8]
max-line-length = 160
